# big-track

./: .gitignore  Cargo.toml  README.md  flake.nix  plan.md  tests.nu  todo.md
src/: cli.rs  config.rs  main.rs
