[package]
name = "big-track"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.108.0"
clap = { version = "4.5.49", features = ["derive"] }
file-hashing = "0.1.2"
indicatif = "0.18.0"
md-5 = "0.10.6"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
